Added swagger and docks
